--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,8 @@
 // Home Content
+header {
+  margin-top: 138px;
+}
+
 .top-section {
   .colors;
   text-align: center;
