--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,3 +1,11 @@
+.top-section {
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+  width: 100%;
+  opacity: 0.9;
+}
+
 nav {
   font-size: 1.7rem;
   padding: 1rem;
